[gd_scene load_steps=4 format=3 uid="uid://bnjktyj6n3hmv"]

[ext_resource type="Theme" uid="uid://bntnkew0b7xww" path="res://resources/space_theme.tres" id="1_1de6g"]
[ext_resource type="Script" path="res://scripts/control_panel.gd" id="1_jec0b"]
[ext_resource type="PackedScene" uid="uid://d0yf2sv2dllbj" path="res://scenes/planet.tscn" id="2_3ywjd"]

[node name="Control_Panel" type="CanvasLayer"]
offset = Vector2(-125, 0)
transform = Transform2D(1, 0, 0, 1, -125, 0)
script = ExtResource("1_jec0b")
planet = ExtResource("2_3ywjd")

[node name="Control_Panel_Container" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -149.5
offset_right = 187.5
offset_bottom = 149.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1de6g")

[node name="Control_Panel" type="Panel" parent="Control_Panel_Container"]
layout_mode = 2

[node name="MenuContainer" type="VBoxContainer" parent="Control_Panel_Container/Control_Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelLabel" type="Label" parent="Control_Panel_Container/Control_Panel/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Control Panel"
horizontal_alignment = 1

[node name="PlanetBox" type="HBoxContainer" parent="Control_Panel_Container/Control_Panel/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="PlanetLabel" type="Label" parent="Control_Panel_Container/Control_Panel/MenuContainer"]
layout_mode = 2

[node name="InfoBox" type="VBoxContainer" parent="Control_Panel_Container/Control_Panel/MenuContainer"]
layout_mode = 2

[node name="Close_Button" type="Button" parent="Control_Panel_Container/Control_Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -187.5
offset_top = -31.0
offset_right = 187.5
grow_horizontal = 2
grow_vertical = 0
text = "close"

[connection signal="pressed" from="Control_Panel_Container/Control_Panel/Close_Button" to="." method="_on_close_button_pressed"]
